--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev": "cross-env NODE_ENV=development node ./bin/build.js",
     "lint": "eslint ./src && prettier --check ./src",
     "lint:fix": "eslint ./src --fix",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "push": "git add . && git commit -m 'new update' && git push"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
