--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "dependencies": {
     "@finsweet/ts-utils": "^0.40.0",
     "gsap": "^3.12.7",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "webflow-api": "^3.1.3"
   },
   "engines": {
     "pnpm": ">=10"
